EVE CORE
http://almende.github.com/eve/


<not yet released>, version 0.19

- Fixed: Agent proxy was not capable of returning primitive types and enums. 


2013-02-22, version 0.18

- Implemented support for a resource name for xmpp connections.
- Implemented subscriptionId for subscriptions, which can be used to uniquely
  identify any subscription. 
- Renamed "context" to "state" (for example FileContext is now called 
  FileState).
- Renamed "class" to "type" in the AgentServlet, and consistently renamed
  everything internally. Everything is backwards compatible.
- Improvements in the agents web interface.
- Minor bug fixes in the XmppService and RunnableScheduler.


2012-01-25, version 0.17

- In the configuration, a set of agents can be configured to be created
  on system startup when they are not existing. To configure agents, a map
  with agentId/agentClass can be provided under "bootstrap", "agents":
      bootstrap:
        agents:
          calc_agent_1: com.almende.eve.agent.example.CalcAgent
          echo_agent_1: com.almende.eve.agent.example.EchoAgent
- Added methods create and delete to the life cycle of an agent. Create is 
  called once when the agent is created, and delete is called once when the
  agent is deleted. The methods can be utilized to perform some custom action
  on creation or deletion of an agent.
- All open XMPP Connections are persisted and are automatically reconnected 
  after a server restart.
- Scheduled tasks are persisted, and are automatically re-scheduled after a
  system restart.
- Implemented @Sender parameter annotation, which can be used to retrieve
  the senders url. Currently only applicable for XMPP. Example usage:
      public String ping(@Name("text") String text, @Sender String sender) {
          System.out.println("Ping text: " + text + ", sender: " + sender);
      }
- SchedulerFactory is created to manage and persist scheduled tasks. 