@@ -14,7 +14,7 @@
 	<description>EVE Google App Engine Demo</description>
 
 	<properties>
-		<appengine.version>1.7.4</appengine.version>
+		<appengine.version>1.7.5</appengine.version>
 	</properties>
 
 	<dependencies>
