@@ -16,7 +16,7 @@
 
 	<properties>
 		<twig-persist.version>2.0-rc</twig-persist.version>
-		<appengine.version>1.7.4</appengine.version>
+		<appengine.version>1.7.5</appengine.version>
 		<javax.servlet-api.version>3.0.1</javax.servlet-api.version>
 	</properties>
 
