@@ -4,7 +4,8 @@ http://almende.github.com/eve/
 
 <not yet released>, version 0.19
 
-- Fixed: Agent proxy was not capable of returning primitive types and enums. 
+- Fixed: Agent proxy was not capable of returning primitive types, enums, or 
+  void.
 
 
 2013-02-22, version 0.18
